--- a/css/style.css
+++ b/css/style.css
@@ -535,7 +535,7 @@ footer{
   -webkit-text-fill-color: transparent;
 	text-align: center;
 	line-height: 35px;
-	margin-right: 60px;
+	margin:0px 60px;
 }
 
 @media (max-width: 1263px) {
